@@ -507,7 +507,7 @@ app_new(int argc, char *argv[], const char *geometry_string)
 	 * to occur.  So we need a fancier move.
 	 */
 	gtk_widget_ref (vpane);
-	gtk_container_remove(GTK_CONTAINER(vpane->parent), vpane);
+	gtk_container_remove(GTK_CONTAINER(gtk_widget_get_parent (vpane)), vpane);
 	gtk_box_pack_start(GTK_BOX(vbox), vpane, TRUE, TRUE, 0);
 	gtk_widget_unref (vpane);
 
@@ -537,7 +537,7 @@ app_new(int argc, char *argv[], const char *geometry_string)
 void
 app_show (void)
 {
-	if (!GTK_WIDGET_MAPPED(app_window))
+	if (!gtk_widget_get_mapped (app_window))
 	{
 		gtk_widget_show(app_window);
 	}
