@@ -791,8 +791,8 @@ save_state(GnomeClient *client, gint phase, GnomeRestartStyle save_style,
 	sess_id  = gnome_client_get_id(client);
 	if (!app_window) return FALSE;
 
-	gdk_window_get_origin (app_window->window, &x, &y);
-	gdk_window_get_size (app_window->window, &w, &h);
+	gdk_window_get_origin (gtk_widget_get_window (app_window), &x, &y);
+	gdk_window_get_size (gtk_widget_get_window (app_window), &w, &h);
 	argv[0] = (char *)data;
 	argv[1] = "--geometry";
 	argv[2] = g_strdup_printf("%dx%d+%d+%d", w, h, x, y);
